Fixes Settings Page Separator!
A separator between Options (Messages, Discussions, Mentions) and (Settings, Signature) has been set to the Highlight color and no longer invisible.

--- a/material.css
+++ b/material.css
@@ -503,3 +503,7 @@ filter: grayscale(40%);
     border-radius: 14px;
     cursor: pointer;
 }
+
+.sideNav .Dropdown--select .Dropdown-menu>.Dropdown-separator {
+    /* background: none; */
+}
